<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Maktaba Jibreel</string>ِ
    <string name="welcome">Welcome</string>
    <string name="home_title">Biggest collection of urdu specially islamic books</string>
    <string name="search">Search</string>
    <string name="books">Books</string>
    <string name="search_details">Detailed Search</string>
    <string name="bookmark">Bookmark</string>
    <string name="current_readings">Current Readings</string>
    <string name="my_library">My Library</string>
    <string name="about_us">About us</string>
    <string name="about_us_parag_1">
        Basic aim of Ilm Deen team is to digitize urdu religious books and provide the facility
        of research according to the needs of modern age.
    </string>
    <string name="about_us_parag_2">
        Maktaba Jibreel is the continuation of this process which, like windows maktaba, contains tafseer,
        hadees, fiqah, fatawi, dars e nazami, islamic history and books related to other subjects and
        Alhamdulillah, not only you can read all these books but you can also search in these books.
    </string>
    <string name="about_us_parag_3">
        Copyrights of all the books are reserved bt their writers, if you find any mistake then contact
        the related writer, maktaba jibreel\'s team\'s only aim is to provide the facility of research and
        search. Use of maktaba jibreel for any financial gain is prohibited. Jazak Allah Ta\'la khair
    </string>
    <string name="maktaba_jibreel_email">maktabajibreel@gmail.com</string>
    <string name="detailed_search_title">Search</string>
    <string name="where_to_search">Search In</string>
    <string name="contents">Contents</string>
    <string name="complete_book">Complete Book</string>
    <string name="how_to_search">How To Search</string>
    <string name="complete_words">Complete Words</string>
    <string name="some_words">Some Words</string>
    <string name="complete_match">Complete Match</string>
    <string name="order">Order</string>
    <string name="only_complete_words">Only Complete Words</string>
    <string name="ignore_search_terms">Ignore Arabic Hamza and Ye etc</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="authority">Authority</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="only_wifi">Only wifi internet</string>
    <string name="search_results_limit">Search results limit</string>
    <string name="import_books">Import Books</string>
    <string name="storage_location">Storage location</string>
    <string name="viewer_setting">Viewer Settings</string>
    <string name="quran_text_color">Quran text color</string>
    <string name="quran_text_size">Quran text size</string>
    <string name="hadees_text_size">Hadees text size</string>

    <string-array name="search_results_limit_options">
        <item>100</item>
        <item>300</item>
        <item>500</item>
        <item>700</item>
        <item>900</item>
        <item>1000</item>
    </string-array>

    <string name="storage_path">Storage/emulated/0/maktabaJibrail</string>

    <string-array name="settings_activity_text_size_options">
        <item>15</item>
        <item>17</item>
        <item>19</item>
        <item>21</item>
        <item>23</item>
        <item>25</item>
    </string-array>

    <string name="currently_read">Currently Read Books</string>
    <string name="hadees_sharif">Hadees Shareef</string>

    <string name="filter_title">Filter Search</string>
    <string name="filter_list">List</string>
    <string name="filter_arrangement">Arrangement</string>
    <string name="filter_any_word">Any Word</string>
    <string name="filter_search_results">Search Results  [14.17]</string>
    <string name="filter_book_name">Book Version 1</string>
    <string name="filter_book_results">Results 2</string>
    <string name="filter_book_result_list">This is a search result from a book</string>

    <string name="english">English</string>
    <string name="urdu">Urdu</string>
</resources>
