<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_current_readings"
            android:icon="@drawable/book"
            android:title="@string/current_readings" />
        <item
            android:id="@+id/nav_detailed_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search_details" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"

            android:title="@string/settings" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/ic_star"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/nav_my_libray"
            android:icon="@drawable/bars"
            android:title="@string/my_library" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_person"
            android:title="@string/about_us" />
    </group>

</menu>