<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_settings"
        style="@style/toolbar">

        <TextView
            style="@style/activity_toolbar_text"
            android:text="@string/settings" />

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorHomeBackground"
            app:layout_constraintTop_toBottomOf="@id/toolbar_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            android:padding="13dp">

            <android.support.v7.widget.CardView
                android:id="@+id/general_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCardBackgroundDark">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/settings_icon_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_settings"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingTop="2dp" />

                    <TextView
                        android:id="@+id/general_text"
                        style="@style/title_text"
                        android:text="@string/general"
                        app:layout_constraintStart_toEndOf="@id/settings_icon_1"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="8dp"/>

                    <TextView
                        android:id="@+id/only_wifi_text"
                        style="@style/setting_item_text"
                        android:text="@string/only_wifi"
                        app:layout_constraintTop_toBottomOf="@id/general_text"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp" />

                    <android.support.v7.widget.SwitchCompat
                        android:id="@+id/only_wifi_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/only_wifi_text"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/search_result_limit_text"
                        style="@style/setting_item_text"
                        android:text="@string/search_results_limit"
                        app:layout_constraintTop_toBottomOf="@id/only_wifi_text"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="20dp" />

                    <Spinner
                        android:id="@+id/search_results_limit_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/search_result_limit_text"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/import_books_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCardBackgroundDark"
                app:layout_constraintTop_toBottomOf="@id/general_card"
                android:layout_marginTop="12dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/books_icon_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_settings"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingTop="2dp" />

                    <TextView
                        android:id="@+id/import_books_text"
                        style="@style/title_text"
                        android:text="@string/import_books"
                        app:layout_constraintStart_toEndOf="@id/books_icon_1"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="8dp"/>

                    <TextView
                        android:id="@+id/storage_location_text"
                        style="@style/setting_item_text"
                        android:text="@string/storage_location"
                        app:layout_constraintTop_toBottomOf="@id/import_books_text"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="10dp" />

                    <TextView
                        android:id="@+id/storage_path_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/storage_path"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/storage_location_text"
                        app:layout_constraintStart_toStartOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorCardBackgroundDark"
                app:layout_constraintTop_toBottomOf="@id/import_books_card"
                android:layout_marginTop="12dp">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/books_icon_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_settings"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:paddingTop="2dp" />

                    <TextView
                        android:id="@+id/viewer_settings_text"
                        style="@style/title_text"
                        android:text="@string/viewer_setting"
                        app:layout_constraintStart_toEndOf="@id/books_icon_2"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginStart="8dp"/>

                    <TextView
                        android:id="@+id/quran_color_text"
                        style="@style/setting_item_text"
                        android:text="@string/quran_text_color"
                        app:layout_constraintTop_toBottomOf="@id/viewer_settings_text"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <ImageView
                        android:id="@+id/quran_text_color_imageview"
                        android:layout_width="55dp"
                        android:layout_height="30dp"
                        app:layout_constraintTop_toTopOf="@id/quran_color_text"
                        app:layout_constraintBottom_toBottomOf="@id/quran_color_text"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:background="@color/colorBlack"
                        android:onClick="openColorPickerDialog"/>

                    <TextView
                        android:id="@+id/quran_text_size_text"
                        style="@style/setting_item_text"
                        android:text="@string/quran_text_size"
                        app:layout_constraintTop_toBottomOf="@id/quran_color_text"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <Spinner
                        android:id="@+id/quran_text_size_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/quran_text_size_text"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/hadees_text_size_text"
                        style="@style/setting_item_text"
                        android:text="@string/hadees_text_size"
                        app:layout_constraintTop_toBottomOf="@id/quran_text_size_text"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <Spinner
                        android:id="@+id/hadees_text_size_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="@id/hadees_text_size_text"
                        app:layout_constraintEnd_toEndOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>