<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutUsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about_us"
        style="@style/toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/activity_toolbar_text"
            android:text="@string/about_us" />

    </android.support.v7.widget.Toolbar>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/toolbar_about_us"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/content_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar_about_us"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorHomeBackground"
            android:padding="13dp">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/colorCardBackgroundDark">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp">

                    <ImageView
                        android:id="@+id/logo_about_us"
                        android:layout_width="match_parent"
                        android:layout_height="65dp"
                        android:src="@drawable/logo"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/about_us_parag1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_parag_1"
                        app:layout_constraintTop_toBottomOf="@id/logo_about_us"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/colorText"/>

                    <TextView
                        android:id="@+id/about_us_parag2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_parag_2"
                        app:layout_constraintTop_toBottomOf="@id/about_us_parag1"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorText"/>

                    <TextView
                        android:id="@+id/about_us_parag3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us_parag_3"
                        app:layout_constraintTop_toBottomOf="@id/about_us_parag2"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/colorText"/>

                    <View
                        android:id="@+id/horizontal_line_break"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorHorizontalLineBreak"
                        app:layout_constraintTop_toBottomOf="@id/about_us_parag3"
                        android:layout_marginTop="20dp" />

                    <TextView
                        android:id="@+id/email_about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maktaba_jibreel_email"
                        android:textColor="@color/colorText"
                        app:layout_constraintTop_toBottomOf="@id/horizontal_line_break"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginTop="10dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/icon_twitter"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/twitter"
                        app:layout_constraintTop_toBottomOf="@id/email_about_us"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/icon_facebook"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        android:layout_marginEnd="15dp"/>

                    <ImageView
                        android:id="@+id/icon_facebook"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/facebook"
                        app:layout_constraintTop_toBottomOf="@id/email_about_us"
                        app:layout_constraintLeft_toRightOf="@id/icon_twitter"
                        app:layout_constraintRight_toLeftOf="@id/icon_youtube"
                        android:layout_marginEnd="15dp"/>

                    <ImageView
                        android:id="@+id/icon_youtube"
                        android:layout_width="32dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/youtube"
                        app:layout_constraintTop_toBottomOf="@id/email_about_us"
                        app:layout_constraintLeft_toRightOf="@id/icon_facebook"
                        app:layout_constraintRight_toRightOf="parent"/>

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>